# nifty-generator

./: Cargo.toml  README.md  config.template.json
src/: combinations.rs  config.rs  deployment.rs  generation.rs  main.rs  metadata.rs  output.rs  random.rs
src/generation/: caches.rs  mod.rs
